fixed overflowing on chrome

--- a/src/index.css
+++ b/src/index.css
@@ -244,16 +244,16 @@ a {
 }
 .Bio {
   touch-action: none;
-  overflow-y: none;
-  overflow-x: none;
+  overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: var(--primaryBg);
   height: auto;
-  max-height: 100vh;
-  width: 40vw;
-  min-width: 250px;
+  max-height: 600px;
+  width: auto;
+  max-width: 400px;
   position: absolute;
   border: 2px outset black;
   border-top-color: whitesmoke;
@@ -306,7 +306,7 @@ a {
 .bioMain {
   max-width: 600px;
   min-width: 250px;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 .bioMain * {
